commiting changes to notebook and readme

--- a/lab/04 - End to End SageMaker Edge Manager AIM325.ipynb
+++ b/lab/04 - End to End SageMaker Edge Manager AIM325.ipynb
@@ -174,7 +174,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 2 - Building and Deploying the ML Model\n",
+    "## Step 2 - Deploying the pre-built ML Model\n",
     "\n",
     "\n",
     "In this below section you will :\n",
