Update 04 - End to End SageMaker Edge Manager AIM325.ipynb
Updates the Step 3 - Markdown
a. Updates the figures titles
b. Corrected the hyperlink for simulator.py

--- a/lab/04 - End to End SageMaker Edge Manager AIM325.ipynb
+++ b/lab/04 - End to End SageMaker Edge Manager AIM325.ipynb
@@ -379,8 +379,8 @@
     "\n",
     "<table border=\"0\" cellpading=\"0\">\n",
     "    <tr>\n",
-    "        <td align=\"center\"><b>STEP-BY-STEP</b></td>\n",
-    "        <td align=\"center\"><b>APPLICATION ARCHITECTURE</b></td>\n",
+    "        <td align=\"center\"><b>ARCHITECTURE</b></td>\n",
+    "        <td align=\"center\"><b>PYTHON CLASS STRUCTURE in DEMO</b></td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "        <td><img src=\"../imgs/EdgeManagerWorkshop_Macro.png\" width=\"500px\"></img></td>\n",
@@ -390,7 +390,7 @@
     "\n",
     "The components of the applicationare:\n",
     "  - Simulator:\n",
-    "      - [Simulator](app/ota.py): Program that launches the virtual wind turbines and the edge devices. It uses Python Threads to run all the 10 processes\n",
+    "      - [Simulator](app/simulator.py): Program that launches the virtual wind turbines and the edge devices. It uses Python Threads to run all the 10 processes\n",
     "      - [Wind Farm](app/windfarm.py): This is the application that runs on the edge device. It is reponsible for reading the sensors, invoking the ML model and analyzing the anomalies  \n",
     "  - Edge Application:\n",
     "      - [Turbine](app/turbine.py): Virtual Wind Turbine. It reads the raw data collected from the 3D Prited Mini Turbine and stream it as a circular buffer. It also has a graphical representation in **IPython Widgets** that is rendered by the Simulator/Dashboard.\n",
