Commented cleanup section

--- a/lab/04 - End to End SageMaker Edge Manager AIM325.ipynb
+++ b/lab/04 - End to End SageMaker Edge Manager AIM325.ipynb
@@ -602,39 +602,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import boto3\n",
-    "import time\n",
-    "from shutil import rmtree\n",
+    "# import boto3\n",
+    "# import time\n",
+    "# from shutil import rmtree\n",
     "\n",
-    "iot_client = boto3.client('iot')\n",
-    "sm_client = boto3.client('sagemaker')\n",
-    "s3_resource = boto3.resource('s3')\n",
+    "# iot_client = boto3.client('iot')\n",
+    "# sm_client = boto3.client('sagemaker')\n",
+    "# s3_resource = boto3.resource('s3')\n",
     "\n",
-    "policy_name='WindTurbineFarmPolicy-%s' % project_id\n",
-    "thing_group_name='WindTurbineFarm-%s' % project_id\n",
-    "fleet_name='wind-turbine-farm-%s' % project_id\n",
+    "# policy_name='WindTurbineFarmPolicy-%s' % project_id\n",
+    "# thing_group_name='WindTurbineFarm-%s' % project_id\n",
+    "# fleet_name='wind-turbine-farm-%s' % project_id\n",
     "\n",
-    "# Delete all files from the S3 Bucket\n",
-    "s3_resource.Bucket(bucket_name).objects.all().delete()\n",
+    "# # Delete all files from the S3 Bucket\n",
+    "# s3_resource.Bucket(bucket_name).objects.all().delete()\n",
     "\n",
-    "# now deregister the devices from the fleet\n",
-    "resp = sm_client.list_devices(DeviceFleetName=fleet_name)\n",
-    "devices = [d['DeviceName'] for d in resp['DeviceSummaries']]\n",
-    "if len(devices) > 0:\n",
-    "    sm_client.deregister_devices(DeviceFleetName=fleet_name, DeviceNames=devices)\n",
+    "# # now deregister the devices from the fleet\n",
+    "# resp = sm_client.list_devices(DeviceFleetName=fleet_name)\n",
+    "# devices = [d['DeviceName'] for d in resp['DeviceSummaries']]\n",
+    "# if len(devices) > 0:\n",
+    "#     sm_client.deregister_devices(DeviceFleetName=fleet_name, DeviceNames=devices)\n",
     "\n",
-    "# now deregister the devices from the fleet\n",
-    "for i,cert_arn in enumerate(iot_client.list_targets_for_policy(policyName=policy_name)['targets']):\n",
-    "    for t in iot_client.list_principal_things(principal=cert_arn)['things']:\n",
-    "        iot_client.detach_thing_principal(thingName=t, principal=cert_arn)\n",
-    "    iot_client.detach_policy(policyName=policy_name, target=cert_arn)\n",
-    "    certificateId = cert_arn.split('/')[-1]\n",
+    "# # now deregister the devices from the fleet\n",
+    "# for i,cert_arn in enumerate(iot_client.list_targets_for_policy(policyName=policy_name)['targets']):\n",
+    "#     for t in iot_client.list_principal_things(principal=cert_arn)['things']:\n",
+    "#         iot_client.detach_thing_principal(thingName=t, principal=cert_arn)\n",
+    "#     iot_client.detach_policy(policyName=policy_name, target=cert_arn)\n",
+    "#     certificateId = cert_arn.split('/')[-1]\n",
     "\n",
-    "iot_client.delete_role_alias(roleAlias='SageMakerEdge-%s' % fleet_name)\n",
-    "iot_client.delete_thing_group(thingGroupName=thing_group_name)\n",
+    "# iot_client.delete_role_alias(roleAlias='SageMakerEdge-%s' % fleet_name)\n",
+    "# iot_client.delete_thing_group(thingGroupName=thing_group_name)\n",
     "\n",
-    "if os.path.isdir('agent'): rmtree('agent')\n",
-    "sm_client.delete_project(ProjectName=project_name)"
+    "# if os.path.isdir('agent'): rmtree('agent')\n",
+    "# sm_client.delete_project(ProjectName=project_name)"
    ]
   },
   {
